# OpenControlCenter_CPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: 00_Vision.md  01_Architecture.md  02_Roadmap.md  03_DeveloperLog.md
docs/adr/: ADR-0001-application-lifetime.md  ADR-0002-widget-create-pattern.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/app/: Application.cpp  Application.h
main/core/: ActionDispatcher.cpp  ActionDispatcher.h  Configuration.cpp  Configuration.h  EventBus.cpp  EventBus.h  LayoutManager.cpp  LayoutManager.h  Screen.h  ScreenManager.cpp  ScreenManager.h  Service.h  ServiceManager.cpp  ServiceManager.h  UIAction.h
main/hardware/: PreferencesHardware.cpp  PreferencesHardware.h  WiFiHardware.cpp  WiFiHardware.h
main/models/: ClockModel.cpp  ClockModel.h  SettingsModel.cpp  SettingsModel.h  SystemModel.cpp  SystemModel.h  WiFiModel.cpp  WiFiModel.h
main/services/: ClockService.cpp  ClockService.h  SystemService.cpp  SystemService.h  WiFiService.cpp  WiFiService.h
main/ui/: DashboardScreen.cpp  DashboardScreen.h  NavigationBar.cpp  NavigationBar.h  SettingsScreen.cpp  SettingsScreen.h  SplashScreen.cpp  SplashScreen.h  StatusBar.cpp  StatusBar.h  Theme.cpp  Theme.h
main/viewmodels/: DashboardViewModel.cpp  DashboardViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  StatusBarViewModel.cpp  StatusBarViewModel.h  ViewModel.h
main/widgets/: Card.cpp  Card.h  IconButton.cpp  IconButton.h  MetricRow.cpp  MetricRow.h  PrimaryValue.cpp  PrimaryValue.h  SystemCard.cpp  SystemCard.h
